<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.alvindizon.meldcxtest.features.history.HistoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.history.HistoryActivity">

        <include
            android:id="@+id/history_toolbar"
            layout="@layout/include_history_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:historyProgressVisibility="@{viewModel.uiState}"
            tools:visibility="visible"/>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history_toolbar"
            app:rvFrameVisibility="@{viewModel.uiState}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_history"/>

        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
